--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,15 +16,32 @@ server.port=9090
 # spring.h2.console.enabled=true
 # # default path: h2-console
 # spring.h2.console.path=/h2-ui
+# DataSource Configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+# H2 Console Configuration (Optional)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/hospitaldb
-spring.datasource.username=postgres
-spring.datasource.password=100%posterR
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
+# Hibernate Configuration
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+
+# Logging Configuration
+logging.level.org.hibernate.SQL=DEBUG
+
+
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/hospitaldb
+#spring.datasource.username=postgres
+#spring.datasource.password=100%posterR
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=update
